# Backend/src/routes/ManageBusBookingRoutes.ts
@@ -1,0 +1,8 @@
+import express from "express";
+import { manageBusBookings } from "../controllers/ManageBusBookings";
+
+const router = express.Router();
+
+router.post("/", manageBusBookings);
+
+export default router;
