# Backend/src/routes/ManageFlightBookingRoutes.ts
@@ -1,0 +1,8 @@
+import express from "express";
+import { manageFlightBookings } from "../controllers/ManageFlightBookings";
+
+const router = express.Router();
+
+router.post("/", manageFlightBookings);
+
+export default router;
